app/css/widgets.scss
.vjs-button {
  width: 30px;
  height: 30px;
  background: rgba(255,255,255,0.3);

  &.active {
    background: white;
  }
}

.signal[data-ui-type=boolean], .signal[data-ui-type=color] {
  display: inline-block;
  width: 20%;
}

.slider {
  color: black;
  box-sizing: border-box;
  width: 100%;
  height: 30px;
  background: rgba(255,255,255,0.3);
}

.slider .level {
  width: 50%;
  height: 100%;
  opacity: 0.6;
  background: white;
}

.slider:hover .level {
  opacity: 1;
}

.popup {
  display: none;
  z-index: 1000;
  position: absolute;
  top: 0;
  left: 0;
  border: 2px solid black;
  background: white;
  color: black;
  .row {
    padding: 2px;
    cursor: pointer;
    font-size: 20px;

    &:hover {
      background: rgba(0,0,0,0.3);
    }
  }
}

.vjs-select {
  cursor: pointer;
  position: relative;
  .button {
    background: rgba(255,255,255,0.3);
    color: black;
    width: 100%;
    height: 30px;
    font-size: 20px;
  }
}

